2010-04-27  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (GetSecurityInfoFunc_t)
	(LookupAccountSidFunc_t, GetLengthSidFunc_t, CopySidFunc_t)
	(EqualSidFunc_t, ConvertSidToStringSidFunc_t): add typedefs
	(initialize_sid_apis): use them instead of explicit types

2010-04-27  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	Response to bug#2959335 (a feature request, actually)
	* modules/syscalls/calls.c [WIN32_NATIVE || UNIX_CYGWIN32]
	(GET-USER-SID): new DEFUN. Returns security identifier (SID)
	of current user or of the user thar's name is specified.
	* modules/syscalls/posix.lisp (GET-USER-SID): exported.

2010-04-27  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* modules/syscalls/calls.c [WIN32_NATIVE || UNIX_CYGWIN32]
	(initialize_sid_apis): dynamic loading of SID API moved out
	of get_owner block and made available on cygwin.
	(get_owner): fixed potential bugs.
	Comments, cosmetics.

2010-04-22  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	Finish and fix COM init patch.
	* win32aux.d (com_initialized): revoke the variable.
	(init_win32): do not init COM.
	(done_win32) [!MULTITHREAD]: unconditionally call
	CoUninitialize.
	* modules/syscalls/calls.c (BTCoCreateInstance): define
	static function for cygwin.

2010-04-21  Sam Steingold  <sds@gnu.org>

	* makemake.in: use "&&" instead of "if+then" for simplicity

2010-04-20  Sam Steingold  <sds@gnu.org>

	* spvw_language.d (init_language_from): accept NULL argument
	(init_language): simplify logic

2010-04-20  Sam Steingold  <sds@gnu.org>

	* stream.d (rd_ch_terminal3): use alloca instead of malloc to
	allocate the prompt

2010-04-20  Sam Steingold  <sds@gnu.org>

	COMPILER-DIAGNOSTICS:USE-HANDLER: COMPILE-FILE must notice the
	warnings signaled by EVAL-WHEN
	* compiler.lisp (c-warn): do not increase *WARNING-COUNT* here
	(c-style-warn): do not increase *STYLE-WARNING-COUNT* & *WARNING-COUNT*
	* condition.lisp (warn-of-type): increase *WARNING-COUNT* and